--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ body {
 
 h1,
 h2,
+h3,
 p {
     font-family: Helvetica, sans-serif;
     line-height: 1.1;
@@ -30,6 +31,10 @@ h1 {
 
 h2 {
     font-size: 2.5rem;
+}
+
+h3 {
+    font-size: 1.5rem;
 }
 
 p {
@@ -148,4 +153,103 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
+}
+
+/* Menu page */
+
+.menu-container {
+    display: grid;
+    grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+    gap: 1.5rem;
+    padding: 5rem 2.5rem 2.5rem;
+    grid-template-areas: 
+    'item1 item1 item2'
+    'item3 item4 item2'
+    'item3 item5 item5';
+    height: 100vh;
+}
+
+.menu-container div {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    border: 1px solid var(--text);
+    gap: 0.5rem;
+    border-radius: 0.5rem;
+    height: 100%;
+    padding: 1.5rem;
+    background-repeat: no-repeat;
+    position: relative;
+    overflow: hidden; 
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.menu-container div::before {
+    content: "";
+    position: absolute;
+    bottom: 0; 
+    left: 0;
+    width: 100%;
+    height: 45%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    z-index: 1; 
+    border-bottom-left-radius: 0.5rem; 
+    border-bottom-right-radius: 0.5rem;
+}
+
+.menu-container div:hover {
+    transform: scale(1.03);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+}
+
+.menu-container div h3 {
+    color: var(--secondary); 
+    position: relative; 
+    z-index: 2
+}
+
+.menu-container div p {
+    color: var(--text);
+    max-width: 500px;
+    position: relative;
+    z-index: 2
+}
+
+.menu-item2,
+.menu-item3,
+.menu-item4 {
+    background-size: cover;
+    background-position: bottom;
+}
+
+.menu-item1,
+.menu-item5 {
+    background-position: center;
+    background-size: contain;
+}
+
+.menu-item1 {
+    grid-area: item1;
+    background-image: url('images/file.png');
+    background-position: center;
+}
+
+.menu-item2 {
+    grid-area: item2;
+    background-image: url('images/atomic-bbq-bliss.jpg');
+}
+
+.menu-item3 {
+    grid-area: item3;
+    background-image: url('images/double-helix-deluxe.jpg');
+}
+
+.menu-item4 {
+    grid-area: item4;
+    background-image: url('images/the-classic-chemist.jpg');
+}
+
+.menu-item5 {
+    grid-area: item5;
+    background-image: url('images/the-veggie-experiment.jpg');
 }
